...
              ),
              BottomNavigationBarItem(
                icon: Icon(
                  _selectedIndex == 1 ? Icons.dashboard : Icons.dashboard_outlined,
                  size: _selectedIndex == 1 ? 28 : 24,
                ),
                label: 'Categories',
              ),
            ],
          ),
        ),
      ),
    );
...
